WIP changes to allow multiple servers from stack run simultaneously